.provarCaches/00D410000011HE0EAM/objects/rstk__pohdraddr__c.object
<CustomObject>
    <description>pohdraddr__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pohdraddr_ordno__r.rstk__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstk__pohdraddr_type__c) &amp; &apos;_&apos; &amp;TEXT(rstk__pohdraddr_seqno__c)</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_city__c</fullName>
        <inlineHelpText>The City corresponding with this PO Header Address.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_contactemail__c</fullName>
        <inlineHelpText>The Contact email corresponding with this PO Header Address.</inlineHelpText>
        <label>Contact Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_country__c</fullName>
        <inlineHelpText>The Country corresponding with this PO Header Address.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpohdraddrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_fax__c</fullName>
        <inlineHelpText>The fax number corresponding with this PO Header Address.</inlineHelpText>
        <label>Fax</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_isocountry__c</fullName>
        <description>pohdraddr_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_ordno__c</fullName>
        <inlineHelpText>Purchase Order Number assigned by the system when converting a requisition to a purchase order or manually entered when creating a new PO without converting a requisition.</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipName>POHDRADDRs1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_phone__c</fullName>
        <inlineHelpText>The phone number corresponding with this PO Header Address.</inlineHelpText>
        <label>Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_seqno__c</fullName>
        <inlineHelpText>The sequence number corresponding with this PO Header Address.  Multiple addresses are allowed with differing sequence numbers.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipName>POHDRADDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_stateprov__c</fullName>
        <inlineHelpText>The State or Province corresponding with this PO Header Address.</inlineHelpText>
        <label>State/Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_street__c</fullName>
        <inlineHelpText>The Street address corresponding with this PO Header Address.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_type__c</fullName>
        <inlineHelpText>Address Type</inlineHelpText>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>PO Mail To</fullName>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Vendor Number</inlineHelpText>
        <label>Vendor No</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>POHDRADDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_website__c</fullName>
        <inlineHelpText>The website URL corresponding with this PO Header Address.</inlineHelpText>
        <label>Website</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__pohdraddr_zippostalcode__c</fullName>
        <inlineHelpText>The Zip Code or Postal Code corresponding with this PO Header Address.</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Header Address</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Header Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Minimum_values_required</fullName>
        <active>true</active>
        <description>Minimum values required.</description>
        <errorConditionFormula>OR(ISBLANK(rstk__pohdraddr_street__c), ISBLANK(rstk__pohdraddr_city__c))</errorConditionFormula>
        <errorMessage>PO header address requires street, city information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Validate_Type</fullName>
        <active>true</active>
        <description>Validate Type.</description>
        <errorConditionFormula>NOT(
OR(
ISPICKVAL(rstk__pohdraddr_type__c , &quot;Billing&quot;),
ISPICKVAL(rstk__pohdraddr_type__c , &quot;PO Mail To&quot;),
ISPICKVAL(rstk__pohdraddr_type__c , &quot;Shipment&quot;))
)</errorConditionFormula>
        <errorMessage>Address Type has to be one of Billing, PO Mail To, Shipment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__pohdr_not_null</fullName>
        <active>true</active>
        <description>PO Header not null.</description>
        <errorConditionFormula>isNULL(rstk__pohdraddr_ordno__c)</errorConditionFormula>
        <errorMessage>Purchase Order Header needs be specified.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__validate_email</fullName>
        <active>true</active>
        <description>Validate Email</description>
        <errorConditionFormula>And(NOT(ISBLANK(rstk__pohdraddr_contactemail__c)), NOT(REGEX(UPPER(rstk__pohdraddr_contactemail__c), &quot;^[A-Z0-9._%+-/!#$%&amp;&apos;*=?^_`{|}~]+@[A-Z0-9.-]+\\.[A-Z]{2,40}$&quot;)))</errorConditionFormula>
        <errorMessage>Email address is not valid.</errorMessage>
    </validationRules>
</CustomObject>